Try again to fix the size on mobile

--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,9 @@ a:hover {
 
 #gradient-canvas {
     position: fixed;
-    width: 100%;
     min-height: 100vh;
     min-height: -webkit-fill-available;
+    width: 100%;
     --gradient-color-1: #ecb1b1;
     --gradient-color-2: #f05656;
     --gradient-color-3: #f5f5f5;
@@ -68,7 +68,7 @@ a:hover {
 .title {
     position: fixed;
     left: 14.28%;
-    bottom: 50%;
+    bottom: 60%;
 }
 
 .title h1 {
